Fix hidden title behind navbar caused by anchors
This commit aims to fix the issue https://github.com/openaustralia/morph/issues/875
When anchor links are used, the header gets hidden behind the navigation bar.
It is caused by default in Bootstrap, and has been corrected in this commit by overriding the default values.
This commit does not change the spacing values of this page or any other pages; only the anchor links are made visible by shifting below.

--- a/app/assets/stylesheets/bootstrap_and_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.scss
@@ -49,3 +49,8 @@ body {
 .jumbotron p {
   font-weight: normal;
 }
+
+.section {
+  padding-top: 50px;
+  margin-top: -30px;
+}
